# gui-osgviz-osgviz

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  GraphPrinter.h  Main.cpp  Module.h  Object.cpp  Object.h  OsgViz.cpp  OsgViz.hpp  PrimitivesFactory.pc.in  osgViz.pc.in  osgVizPlugin.pc.in
src/_graphics/: GraphicsCamera.cpp  GraphicsViewer.cpp  gui_helper_functions.h
src/_graphics/configuration/: osgviz_graphics.pc.in
src/_graphics/interfaces/: GraphicsCameraInterface.h  GraphicsEventClient.h  GraphicsEventInterface.h  GraphicsGuiInterface.h  GraphicsManagerInterface.h  GraphicsUpdateInterface.h  GraphicsWindowInterface.h
src/_graphics/interfaces/data/: GraphicData.cpp  LightData.cpp  LightData.h  MaterialData.cpp  MaterialData.h  core_objects_exchange.h
src/_graphics/shader/: pixellight.h  shader-function.cpp  shader-function.h  shader-generator.h  shader-types.cpp  shader-types.h  texgen.cpp  texgen.h
src/_graphics/shadow/: ShadowMap.cpp
src/_graphics/wrapper/: OSGMaterialStruct.cpp
src/graphics/: CMakeLists.txt  DrawObject.cpp  DrawObject.h  GraphicsCamera.cpp  GraphicsCamera.h  GraphicsManager.cpp  GraphicsManager.h  GraphicsViewer.h  GraphicsWidget.cpp  GraphicsWindow.cpp  GraphicsWindow.h  HUD.cpp  HUD.h  HUDElement.h  PostDrawCallback.cpp  PostDrawCallback.h  config.h  gui_helper_functions.cpp  gui_helper_functions.h
src/graphics/3d_objects/: CoordsPrimitive.cpp  CoordsPrimitive.h  DrawObject.cpp  GridPrimitive.cpp  GridPrimitive.h  LoadDrawObject.cpp
src/graphics/interfaces/: GraphicsCameraInterface.h  GraphicsManagerInterface.h  GraphicsWindowInterface.h  GuiEventInterface.h  OsgVizDefs.h  cameraStruct.h
src/graphics/interfaces/data/: GraphicData.cpp  GraphicData.h  LightData.cpp  LightData.h  MaterialData.cpp  MaterialData.h  core_objects_exchange.h
src/graphics/shader/: bumpmapping.cpp  bumpmapping.h  pixellight.cpp  shader-generator.cpp
src/graphics/shadow/: ShadowMap.cpp  ShadowMap.h
src/graphics/wrapper/: OSGDrawItem.cpp  OSGDrawItem.h  OSGLightStruct.cpp  OSGLightStruct.h  OSGMaterialStruct.cpp  OSGMaterialStruct.h
src/interfaces/: Clickable.h  MouseMoveCallback.h  Updatable.h  WindowInterface.h  WindowResizeCallback.h
src/modules/ManipulationClickHandler/: ManipulationClickHandler.cpp  ManipulationClickHandler.h  TranslateRotateDragger.cpp  TranslateRotateDragger.h
src/modules/viz/ModelLoader/: ModelLoader.cpp  ModelLoader.h
src/modules/viz/Primitives/: PrimitivesFactory.cpp  PrimitivesFactory.h
src/modules/viz/Primitives/Primitives/: ArrowNode.cpp  ArrowNode.h  AxesNode.cpp  AxesNode.hpp  CircularArrowNode.cpp  CircularArrowNode.h  Graph_2D.cpp  Graph_2D.hpp  GridNode.cpp  GridNode.hpp  LinesNode.cpp  LinesNode.h  RingNode.cpp  RingNode.hpp  SphereNode.cpp  SphereNode.hpp  TextNode.cpp  TextNode.hpp  WireframeBox.cpp  WireframeBox.hpp
src/plugins/: CMakeLists.txt  ModelView.cpp  ModelView.h  Object.cpp  Object.h  OsgVizDataPlugin.h  OsgVizPlugin.h  OsgVizVisualizerPlugin.h  Visualizer.h
src/plugins/ManipulationClickHandler/: ManipulationClickHandler.cpp  ManipulationClickHandler.h  TranslateBoxDragger.cpp  TranslateBoxDragger.h  TranslateRotateDragger.cpp
src/plugins/data/: ModelLoader.cpp  ModelLoader.h
src/plugins/data/ModelLoader/: CMakeLists.txt  ModelLoader.cpp  ModelLoader.h
src/plugins/viz/: ModelView.cpp  ModelView.h
src/plugins/viz/ModelLoader/: ModelLoader.cpp  ModelLoader.h
src/plugins/viz/ModelView/: CMakeLists.txt  ModelView.cpp  ModelView.h  ModelViewFactory.cpp  ModelViewFactory.h
src/plugins/viz/Primitives/: CMakeLists.txt  Primitive.cpp  Primitive.h  Primitives.cpp  PrimitivesFactory.cpp  PrimitivesFactory.h
src/plugins/viz/Primitives/Primitives/: ArrowNode.h  GridNode.cpp  ShapeNode.cpp  ShapeNode.h  WireframeBox.hpp
src/tools/: GlobalPos.h  GraphPrinter.h  SearchNodes.h  Timing.h  TypeNameDemangling.h  UpdateThread.cpp  UpdateThread.h
src/windows/: HUD.cpp  HUD.h  ObjectSelector.cpp  ObjectSelector.h  SuperView.cpp  SuperView.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
src/windows/CameraManipulator/: TerrainZoomManipulator.cpp  TerrainZoomManipulator.hpp
src/windows/EventHandlers/: HierarchicalEventHandler.cpp  HierarchicalEventHandler.h  ManipulationClickHandler.cpp  ManipulationClickHandler.h  MouseMoveEvent.cpp  MouseMoveEvent.h  NullClickObject.h  ObjectSelector.cpp  ObjectSelector.h  TranslateBoxDragger.cpp  TranslateBoxDragger.h  WindowResizeEvent.cpp  WindowResizeEvent.h
src/windows/HUD/: HUD.cpp  HUD.h  HUDHoverScaler.cpp  HUDHoverScaler.h  HUDPositionChanger.cpp  HUDPositionChanger.h
src/windows/config/: WindowConfig.h
test/: CMakeLists.txt  test_Dummy.cpp
